fix: edge path change css and fix trabl no visible

--- a/src/modules/node-graph/style/style.css
+++ b/src/modules/node-graph/style/style.css
@@ -1,6 +1,7 @@
 .react-flow {
   --bg-color: rgb(17, 17, 17);
   --text-color: rgb(243, 244, 246);
+  --node-color: rgb(255, 255, 255);
   --node-border-radius: 10px;
   --node-box-shadow: 10px 0 15px rgba(42, 138, 246, 0.3),
     -10px 0 15px rgba(233, 42, 103, 0.3);
@@ -8,7 +9,7 @@
   color: var(--text-color);
 }
 
-.react-flow__node-turbo {
+.react-flow__node-custom {
   border-radius: var(--node-border-radius);
   display: flex;
   height: 70px;
@@ -32,7 +33,7 @@
 }
 
 .react-flow__edge .react-flow__edge-path {
-  stroke: url(#edge-gradient);
+  stroke: var(--node-color);
   stroke-width: 2;
   stroke-opacity: 0.75;
 }
